# poc-program

./: Anchor.toml  TestScript.txt  access_control-keypair.json  asset_manager-keypair.json  package-lock.json  package.json  redemption_manager-keypair.json  tsconfig.json  xxusd_token-keypair.json
migrations/: deploy.ts
programs/access_control/: Cargo.toml
programs/access_control/src/: lib.rs
programs/asset_manager/: Cargo.toml
programs/asset_manager/src/: lib.rs
programs/flexxcash-poc/: Cargo.toml
programs/flexxcash-poc/src/: lib.rs
programs/hedging_strategy/: Cargo.toml
programs/hedging_strategy/src/: lib.rs
programs/lock_manager/: Cargo.toml
programs/lock_manager/src/: lib.rs
programs/price_oracle/: Cargo.toml
programs/price_oracle/src/: lib.rs
programs/redemption_manager/: Cargo.toml
programs/redemption_manager/src/: lib.rs
programs/xxusd_token/: Cargo.toml
programs/xxusd_token/src/: lib.rs
tests/: access_control.ts  asset_manager.ts  flexxcash-poc.ts  hedging_strategy.ts  integration_test.ts  lock_manager.ts  price_oracle.ts  redemption_manager.ts  xxusd_token.ts
