[package]
name = "asset_manager"
version = "0.1.0"
description = "Asset Manager for FlexxCash"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "asset_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
init-if-needed = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.23"